--- a/gst/Makefile.am
+++ b/gst/Makefile.am
@@ -16,7 +16,7 @@ AM_CFLAGS = \
     -Wno-parentheses-equality \
     $(DEBUG_CFLAGS)
 
-lib_LTLIBRARIES = libopenwebrtc_gst.la
+noinst_LTLIBRARIES = libopenwebrtc_gst.la
 
 libopenwebrtc_gst_la_SOURCES = \
     owr_gst_audio_renderer.c \
@@ -24,23 +24,13 @@ libopenwebrtc_gst_la_SOURCES = \
     owr_gst_video_renderer.c
 
 libopenwebrtc_gst_la_LIBADD = \
-    $(top_builddir)/owr/libopenwebrtc.la \
     $(GSTREAMER_LIBS) \
     $(GLIB_LIBS)
-
-libopenwebrtc_gst_la_DEPENDENCIES = \
-    $(top_builddir)/owr/libopenwebrtc.la
 
 includedir = $(prefix)/include/owr
 include_HEADERS = \
     owr_gst_audio_renderer.h \
     owr_gst_media_source.h \
     owr_gst_video_renderer.h
-
-pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = openwebrtc-gst-@OWR_API_VERSION@.pc
-
-EXTRA_DIST = \
-    openwebrtc-gst-@OWR_API_VERSION@.pc.in
 
 -include $(top_srcdir)/git.mk
